<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DroidCafe">

    <TextView
        android:id="@+id/textIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_regular"
        android:text="@string/intro_text"
        android:textSize="@dimen/text_heading" />

    <TextView
        android:id="@+id/choose_dessert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textIntro"
        android:padding="@dimen/padding_regular"
        android:text="@string/choose_a_dessert" />

    <ImageView
        android:id="@+id/donut"
        android:layout_width="@dimen/droid_cafe_img_size"
        android:layout_height="@dimen/droid_cafe_img_size"
        android:layout_below="@id/choose_dessert"
        android:contentDescription="@string/donuts"
        android:onClick="showDonutOrder"
        android:padding="@dimen/padding_regular"
        android:src="@drawable/donut_circle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_dessert"
        android:layout_toRightOf="@id/donut"
        android:padding="@dimen/padding_wide"
        android:text="@string/donuts" />

    <ImageView
        android:id="@+id/ice_cream"
        android:layout_width="@dimen/droid_cafe_img_size"
        android:layout_height="@dimen/droid_cafe_img_size"
        android:layout_below="@id/donut"
        android:contentDescription="@string/ice_cram_sandwiches"
        android:onClick="showIceCreamOrder"
        android:padding="@dimen/padding_regular"
        android:src="@drawable/icecream_circle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/donut"
        android:layout_toRightOf="@id/ice_cream"
        android:padding="@dimen/padding_wide"
        android:text="@string/ice_cram_sandwiches" />

    <ImageView
        android:id="@+id/froyo"
        android:layout_width="@dimen/droid_cafe_img_size"
        android:layout_height="@dimen/droid_cafe_img_size"
        android:layout_below="@id/ice_cream"
        android:contentDescription="@string/froyo"
        android:onClick="showFroyoOrder"
        android:padding="@dimen/padding_regular"
        android:src="@drawable/froyo_circle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ice_cream"
        android:layout_toRightOf="@id/froyo"
        android:padding="@dimen/padding_wide"
        android:text="@string/froyo" />

</RelativeLayout>